Added rate href to housework. Some tests added and some refactored.